# ligames

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/static/: index.scss
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
