[package]
name = "ligames"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.5.0"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["cors"] }
