[package]
name = "ligames-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
reqwasm = "0.5.0"
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.5"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

ligames = { path = "../shared" } # use shared types

[lib]
crate-type = ["cdylib"] # for WebAssembly
